--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,40 @@
     overscroll-behavior: contain;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.header-title {
+    font-size: 1.8em;
+    font-weight: bold;
+}
+
+.global-conf {
+    display: flex;
+    gap: 3em;
+}
+
+.global-conf-title {
+    font-weight: bold;
+    margin: 2px;
+    margin-bottom: 0.5em;
+}
+
+.global-conf input {
+    margin: 2px;
+}
+
+.global-conf label {
+    margin: 2px;
+}
+
+.series-conf {
+    margin-bottom: 0.5em;
+}
+
 .content {
     font-family: Roboto, sans-serif;
     font-size: 16px;
@@ -28,10 +62,10 @@
 
 h2 {
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
-label {
+.links label {
     display: inline-block;
     width: 120px;
 }
@@ -60,7 +94,7 @@ button:hover {
     width: 200px;
 }
 
-input {
+.links input {
     padding: 5px;
     margin: 2px;
     box-sizing: border-box;
@@ -73,7 +107,7 @@ input {
     max-width: 800px;
 }
 
-.search-input {
+.links .search-input {
     margin-top: 16px;
 }
 
