--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,9 @@ button:hover {
     width: 200px;
 }
 
-.links input {
+.links input,
+input[type="text"],
+input[type="password"] {
     padding: 5px;
     margin: 2px;
     box-sizing: border-box;
@@ -189,4 +191,43 @@ a {
     padding-left: 10px;
     list-style: inside;
     overflow: auto;
+}
+
+.mu-login {
+    z-index: 310;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mu-login form {
+    width: 100%;
+    max-width: 540px;
+}
+
+.mu-login div {
+    margin: 6px;
+}
+
+.mu-login .mu-login-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.mu-login .mu-login-desc {
+    font-size: smaller;
+    margin-bottom: 12px;
+}
+
+#mu-login-error {
+    color: #ff0000;
+    font-weight: bold;
+    margin-bottom: 12px;
 }
